idf_component_register(SRCS "hardware_drivetrain.cpp" 
                    "wireless_driving.cpp" 
                    "twai_test_main.c" 
                    "webserver_service.cpp" 
                    "wifi_service.cpp" 
                    "drive_math.cpp"
                    "twai_service.cpp" 
                    "main.cpp"
                    "rr_os_service.cpp" 
                    "led.cpp"
                    "imu_service.cpp"
                    "encoder_service.cpp"
                    "uros_service.cpp"                    
                    INCLUDE_DIRS "include"
                    )
#spiffs_create_partition_image(storage ../partition FLASH_IN_PROJECT)