idf_component_register(SRCS "helpers.cpp" "hardware_drivetrain.cpp" 
                    "wireless_driving.cpp" 
                    "tof_service.cpp"
                    "twai_test_main.c" 
                    "drive_math.cpp"
                    "twai_service.cpp" 
                    "main.cpp"
                    "rr_os_service.cpp" 
                    "led.cpp"
                    "imu_service.cpp"
                    "encoder_service.cpp"
                    "uros_service.cpp"   
                    "estimator.cpp"   
                    "helpers.cpp"              
                    INCLUDE_DIRS "include"
                    )
#spiffs_create_partition_image(storage ../partition FLASH_IN_PROJECT)